# sc-cli

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  config.toml.example
.github/: FUNDING.yml
src/: config.rs  git.rs  lib.rs  main.rs  story_creator.rs  story_editor.rs
src/api/: client.rs  mod.rs
src/api/tests/: client_tests.rs  mod.rs  types_tests.rs
src/git/: mod.rs  operations.rs
src/story_creator/: tests.rs
src/story_editor/: tests.rs
src/ui/: mod.rs
src/ui/tests/: app_tests.rs  comment_popup_tests.rs  edit_story_tests.rs  list_view_tests.rs  mod.rs  pagination_tests.rs  rendering_tests.rs  state_selector_tests.rs
tests/: cli_test.rs  integration_test.rs
