[package]
name = "sc-tui"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "TUI client for Shortcut stories"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime (for reqwest)
tokio = { version = "1.47", features = ["full"] }
