[package]
name = "sc-cli"
version = "0.1.0"
edition = "2024"
authors = ["Eduardo Diaz"]
description = "CLI and TUI client for Shortcut stories"
license = "MIT"

[[bin]]
name = "sc-cli"
path = "src/main.rs"

[lib]
name = "sc_cli"
path = "src/lib.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
tui-textarea = "0.7.0"
crossterm = "0.29"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime (for reqwest)
tokio = { version = "1.47", features = ["full"] }

# Configuration
toml = "0.8"
dirs = "5.0"

# Interactive prompts
dialoguer = "0.11"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Browser opening
open = "5.3"

[dev-dependencies]
# Testing
mockito = "1.6"
tempfile = "3.20"
rstest = "0.24"
pretty_assertions = "1.4"
wiremock = "0.6"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
